--- a/collection.ipynb
+++ b/collection.ipynb
@@ -484,36 +484,47 @@
      "output_type": "stream",
      "text": [
       "Scraping data for season: 2003-2004\n",
-      "Saved Table for 2003-2004 to data/raw/laliga\\bundesliga-2003_2004.csv\n",
+      "Saved Table for 2003-2004 to data/raw/laliga\\laliga-2003_2004.csv\n",
       "Scraping data for season: 2004-2005\n",
-      "Saved Table for 2004-2005 to data/raw/laliga\\bundesliga-2004_2005.csv\n",
+      "Saved Table for 2004-2005 to data/raw/laliga\\laliga-2004_2005.csv\n",
       "Scraping data for season: 2005-2006\n",
-      "Saved Table for 2005-2006 to data/raw/laliga\\bundesliga-2005_2006.csv\n",
+      "Saved Table for 2005-2006 to data/raw/laliga\\laliga-2005_2006.csv\n",
       "Scraping data for season: 2006-2007\n",
-      "Saved Table for 2006-2007 to data/raw/laliga\\bundesliga-2006_2007.csv\n",
+      "Saved Table for 2006-2007 to data/raw/laliga\\laliga-2006_2007.csv\n",
       "Scraping data for season: 2007-2008\n",
-      "Saved Table for 2007-2008 to data/raw/laliga\\bundesliga-2007_2008.csv\n",
+      "Saved Table for 2007-2008 to data/raw/laliga\\laliga-2007_2008.csv\n",
       "Scraping data for season: 2008-2009\n",
-      "Saved Table for 2008-2009 to data/raw/laliga\\bundesliga-2008_2009.csv\n",
+      "Saved Table for 2008-2009 to data/raw/laliga\\laliga-2008_2009.csv\n",
       "Scraping data for season: 2009-2010\n",
-      "Saved Table for 2009-2010 to data/raw/laliga\\bundesliga-2009_2010.csv\n",
+      "Saved Table for 2009-2010 to data/raw/laliga\\laliga-2009_2010.csv\n",
       "Scraping data for season: 2010-2011\n",
-      "Saved Table for 2010-2011 to data/raw/laliga\\bundesliga-2010_2011.csv\n",
+      "Saved Table for 2010-2011 to data/raw/laliga\\laliga-2010_2011.csv\n",
       "Scraping data for season: 2011-2012\n",
-      "Saved Table for 2011-2012 to data/raw/laliga\\bundesliga-2011_2012.csv\n",
+      "Saved Table for 2011-2012 to data/raw/laliga\\laliga-2011_2012.csv\n",
       "Scraping data for season: 2012-2013\n",
-      "Saved Table for 2012-2013 to data/raw/laliga\\bundesliga-2012_2013.csv\n",
+      "Saved Table for 2012-2013 to data/raw/laliga\\laliga-2012_2013.csv\n",
       "Scraping data for season: 2013-2014\n",
-      "Saved Table for 2013-2014 to data/raw/laliga\\bundesliga-2013_2014.csv\n",
+      "Saved Table for 2013-2014 to data/raw/laliga\\laliga-2013_2014.csv\n",
       "Scraping data for season: 2014-2015\n",
-      "Saved Table for 2014-2015 to data/raw/laliga\\bundesliga-2014_2015.csv\n",
+      "Saved Table for 2014-2015 to data/raw/laliga\\laliga-2014_2015.csv\n",
       "Scraping data for season: 2015-2016\n",
-      "Saved Table for 2015-2016 to data/raw/laliga\\bundesliga-2015_2016.csv\n",
+      "Saved Table for 2015-2016 to data/raw/laliga\\laliga-2015_2016.csv\n",
       "Scraping data for season: 2016-2017\n",
-      "Saved Table for 2016-2017 to data/raw/laliga\\bundesliga-2016_2017.csv\n",
+      "Saved Table for 2016-2017 to data/raw/laliga\\laliga-2016_2017.csv\n",
       "Scraping data for season: 2017-2018\n",
-      "Saved Table for 2017-2018 to data/raw/laliga\\bundesliga-2017_2018.csv\n",
-      "Scraping data for season: 2018-2019\n"
+      "Saved Table for 2017-2018 to data/raw/laliga\\laliga-2017_2018.csv\n",
+      "Scraping data for season: 2018-2019\n",
+      "Saved Table for 2018-2019 to data/raw/laliga\\laliga-2018_2019.csv\n",
+      "Scraping data for season: 2019-2020\n",
+      "Saved Table for 2019-2020 to data/raw/laliga\\laliga-2019_2020.csv\n",
+      "Scraping data for season: 2020-2021\n",
+      "Saved Table for 2020-2021 to data/raw/laliga\\laliga-2020_2021.csv\n",
+      "Scraping data for season: 2021-2022\n",
+      "Saved Table for 2021-2022 to data/raw/laliga\\laliga-2021_2022.csv\n",
+      "Scraping data for season: 2022-2023\n",
+      "Saved Table for 2022-2023 to data/raw/laliga\\laliga-2022_2023.csv\n",
+      "Scraping data for season: 2023-2024\n",
+      "Saved Table for 2023-2024 to data/raw/laliga\\laliga-2023_2024.csv\n"
      ]
     }
    ],
