--- a/Dashboard.ipynb
+++ b/Dashboard.ipynb
@@ -2,21 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bouft\\AppData\\Local\\Temp\\ipykernel_22688\\4149130632.py:62: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "C:\\Users\\bouft\\AppData\\Local\\Temp\\ipykernel_9704\\4149130632.py:62: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
+      "  test_data['Predicted_Points'] = predicted_points\n"
      ]
     }
    ],
@@ -93,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +109,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2765e1f4e00>"
+       "<IPython.lib.display.IFrame at 0x1705283a5d0>"
       ]
      },
      "metadata": {},
