--- a/Dashboard.ipynb
+++ b/Dashboard.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bouft\\AppData\\Local\\Temp\\ipykernel_9704\\4149130632.py:62: SettingWithCopyWarning: \n",
+      "C:\\Users\\bouft\\AppData\\Local\\Temp\\ipykernel_7088\\4149130632.py:62: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -109,7 +109,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1705283a5d0>"
+       "<IPython.lib.display.IFrame at 0x17affeea780>"
       ]
      },
      "metadata": {},
