--- a/my_model.ipynb
+++ b/my_model.ipynb
@@ -33,7 +33,7 @@
     "import os\n",
     "\n",
     "# Dossier contenant les données\n",
-    "data_dir = 'C:/Users/bouft/OneDrive/Bureau/FOOTBALL-main/data/processed'\n",
+    "data_dir = 'data/processed'\n",
     "\n",
     "# Listes des ligues et des fichiers\n",
     "leagues = ['bundesliga', 'laliga', 'ligue1', 'premierleague', 'seriea']\n",
