--- a/Dashboard.ipynb
+++ b/Dashboard.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bouft\\AppData\\Local\\Temp\\ipykernel_7088\\4149130632.py:62: SettingWithCopyWarning: \n",
+      "C:\\Users\\bouft\\AppData\\Local\\Temp\\ipykernel_7088\\4126371732.py:62: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  test_data['Predicted_Points'] = predicted_points\n"
+      "\n"
      ]
     }
    ],
@@ -24,7 +26,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "# Dossier contenant les données\n",
-    "data_dir = 'C:/Users/bouft/OneDrive/Bureau/FOOTBALL-main/data/processed'\n",
+    "data_dir = 'data/processed'\n",
     "\n",
     "# Listes des ligues et des fichiers\n",
     "leagues = ['bundesliga', 'laliga', 'ligue1', 'premierleague', 'seriea']\n",
